--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -1,13 +1,13 @@
-gfh
-gfh
-fgh
-f
-gh
-fg
-hfg
-hfghfgh
-fg
-h
-fg
-h
-fghfghfghssgh
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Ejercicio 3 git</title>
+    <meta charset="UTF8" />
+  </head>
+  <body>
+    <main>
+      <h1>Título</h1>
+      <img src="https://picsum.photos/seed/picsum/200/300">
+    </main>
+  </body>
+</html>
